fix: adapta dark mode aos novos web components do Chrome

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -136,6 +136,9 @@
     border: 2px solid #363b69;
     border-radius: 5px;
   }
+  .select {
+    background-color: #1d2139;
+  }
   .button {
     background-color: #9e99ff;
   }
